--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <video src="./src/audio/gettyimages-1064319234-640_adpp.mp4" width="1024" height="1024"></video>
     <section class="cadastro">
         <h4><b><a class="color" href="cadastro.html" target="_blank">Cadastro - Clique Aqui!</a></b></h4>
+        <h4><b><a class="color" href="cadastro2.html" target="_blank">Cadastro Contato - Clique Aqui!</a></b></h4>
     </section>
 </body>
 </html>
